--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div>
     <form id="cityinput">
         <input type="text" name="city" placeholder="Input your city">
-        <input type="submit" value="Submit">
+        <!-- <input type="submit" value="Submit"> -->
+        <div><a href="#/results" class="button">Submit</a></div>
     </form>
     </div>
 
