cleaned up a bit

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
     <div class="container">
 
     <div class="header">
-        <img src="http://fc09.deviantart.net/fs28/i/2008/082/f/a/Dark_cloud_stock_01_by_sweetemotions_stock.jpg">
+        <h2>Local Weather App</h2>
+        <br>
+        <h3>Your local weather:</h3>
+        <br>
+        <!-- <img src="http://fc09.deviantart.net/fs28/i/2008/082/f/a/Dark_cloud_stock_01_by_sweetemotions_stock.jpg"> -->
     </div>
     
-    <div>
+    <!-- <div>
     <form id="cityinput">
         <input type="text" name="city" placeholder="Input your city">
         <input type="submit" value="Submit">
-        <!-- <div><a href="#/results" class="button">Submit</a></div> -->
+        <div><a href="#/results" class="button">Submit</a></div>
     </form>
     </div>
-
+ -->
     <div id="weather"></div>
     <div></div>
 
