changes to look cleaner

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
 
     <div class="header">
-        <h2>Local Weather App</h2>
-        <br>
-        <h3>Your local weather:</h3>
+        <div class="borderheader">
+        <h2>LOCAL WEATHER</h2>
+        </div>
         <br>
         <!-- <img src="http://fc09.deviantart.net/fs28/i/2008/082/f/a/Dark_cloud_stock_01_by_sweetemotions_stock.jpg"> -->
     </div>
@@ -26,8 +26,8 @@
     </form>
     </div>
  -->
-    <div id="weather"></div>
-    <div></div>
+    <div class="weather"></div>
+
 
     </div>
 
